# college

./: .gitignore  README.md
cci-22/Lab2/: code.m
cci-22/Lab3/: code.m
cci-22/Lab4/: questao1.m  questao2.m  resultados.txt
cci-22/Lab5/: questao1.m  questao2.m
cci-22/Lab6/: questao1.m
cci-22/Lab7/: questao1.m
cci-22/Lab8/: lab8.m
ces-10/Exam/: lcd.cpp  problem.cpp  viagem.cpp
ces-10/Lab1/: calculadora.cpp  multiplicacao.cpp
ces-10/Lab4/: binaria.cpp
ces-10/Lab6/: ler.cpp
ces-10/LinkedList/: Makefile  list.h
ces-11/: Kenji_Yamane_2.cpp  Kenji_Yamane_6.cpp  Kenji_Yamane_8.cpp
ct-213/: .gitignore
ct-213/Lab1/: behavior_tree.py
ct-213/Lab10/: dynamic_programming.py
ct-213/Lab11/: main.py  reinforcement_learning.py
ct-213/Lab12/: train_dqn.py
ct-213/Lab2/: grid.py  main.py  path_planner.py
ct-213/Lab3/: ball_fit.py  gradient_descent.py  hill_climbing.py  simulated_annealing.py
ct-213/Lab4/: constants.py  particle_swarm_optimization.py  simulation.py
ct-213/Lab5/: benchmark_evolution_strategy.py  simple_evolution_strategy.py
ct-213/Lab6/: neural_network.py  test_neural_network.py
ct-213/Lab7/: test_keras.py
optatives/fm-224/lista5/src/: CMakeLists.txt  gaussian_sample.cpp  lorentz_attractor.cpp  lorentz_time_series.cpp  ulam_sample.cpp  uniform_sample.cpp
optatives/fm-224/lista5/src/lib/: CMakeLists.txt  Lorentz.cpp  Lorentz.h  RandomUtils.cpp  RandomUtils.h
optatives/fm-224/trabalho_bimestral1/src/: CMakeLists.txt  lorentz_spectrum.cpp  lorentz_time_series.txt
optatives/signal_processing/lab2/source/tests/: BallTracker_ComponentTest.cpp  CMakeLists.txt  Robot2DLocalizer_ComponentTest.cpp
scientific_research/: vss_colors.tex
utils/: clion.sh  erasehistory.sh  grades.txt  remove_namespace.py  setup.sh
(+700 files in other folders)
